add_subdirectory(Testv071_BUILD)
add_subdirectory(Testv071_RNN_NODE)
add_subdirectory(Testv071_RNN_CENTROID)
add_subdirectory(Testv071_RNN_BUFFER)
add_subdirectory(Testv071_DATA_INPUT)
add_subdirectory(Testv071_METRIC)
add_subdirectory(Testv071_ADD_NODES)
add_subdirectory(Testv071_RMV_NODES)
add_subdirectory(Testv071_FIND_NODES)
add_subdirectory(Testv071_DBSCAN)
add_subdirectory(Testv071_LIFECYCLE)
add_subdirectory(Testv071_MULTITHREAD)
